0026082: When view is resized horizontally the visualization is not scaled